<resources>
    <string name="app_name">FakeLoginApp</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log in</string>
    <string name="senha">senha</string>
    <string name="e_mail">e-mail</string>
    <string name="to_continue">TO CONTINUE</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="for_your_account">FOR YOUR ACCOUNT</string>
    <string name="nome">nome</string>
    <string name="sing_up">SING UP</string>
    <string name="log_in_singup">LOG IN</string>
</resources>