<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMain"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:layout_marginTop="80dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/to_continue"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:letterSpacing="0.3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:layout_gravity="center|center_vertical">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textColor="@color/colorMain"
            android:layout_gravity="center"
            android:text="@string/log_in"
            android:textSize="16sp"
            android:background="@color/colorWhite"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorWhite"
            android:text="@string/create_account"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</LinearLayout>